# podman-dev-env

./: .env  .gitignore  README.md  docker-compose.yml  docker-compose_ref.yml
backend/: Dockerfile  openapi.json
backend/app/: models.py
backend/app/api/: main.py
backend/app/api/routes/: items.py  users.py
backend/app/core/: db.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_user.py
frontend/: .captain.yml  Dockerfile  index.html
frontend/src/: App.tsx  main.tsx
frontend/src/client/: schemas.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: _layout.tsx  login.tsx
local-dev/: .env.template  .vela-build-java-template.yml  .vela-build-python-template.yml  .vela-build-react-template.yml  .vela-build-react-vite-template.yml  .vela.yml  Dockerfile.node  README.md  docker-compose.yml
local-dev/java/: .captain.yml  Dockerfile  Dockerfile.dev  build.gradle  gradle.properties
local-dev/java/scripts/: entrypoint.sh
local-dev/python/: .captain.yml  Dockerfile.dev  alembic.ini  config.eskip  init-aws.sh  pyproject.toml
local-dev/python/app/: crud.py  main.py
local-dev/python/app/alembic/: env.py
local-dev/python/app/alembic/versions/: 407318d788d8_create_user_table.py
local-dev/python/app/api/routes/: utils.py
local-dev/python/app/core/: config.py  security.py
local-dev/python/app/tests/utils/: item.py  user.py
local-dev/python/scripts/: test.json  test_api.sh
local-dev/react/: .captain.yml  .dockerignore  .npmrc  Dockerfile.dev  index.html  package.json  vite.config.ts
local-dev/react-vite-ts/: package.json  pnpm-lock.yaml  vite.config.ts
local-dev/react/src/: App.tsx  i18n.ts  main.tsx
scripts/localstack/: init-aws.sh
scripts/skipper/: config.eskip
(+30 files in other folders)
